WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178523
AX: [ATK] Events missing and state incorrect for aria-activedescendant
https://bugs.webkit.org/show_bug.cgi?id=178523
Summary
AX: [ATK] Events missing and state incorrect for aria-activedescendant
Joanmarie Diggs
Reported
2017-10-19 10:39:44 PDT
According to the Core AAM: 1. When the aria-activedescendant of an element changes, we should emit object:state-changed:focused. We don't. 2. When a focused element has a valid active descendant, we should not exposed the focused state on the element, but rather on the active descendant. We expose it on the element. 3. The active descendant should have the focusable state even though the element itself might not technically be keyboard focusable. (The author is expected to make it work.) We don't.
Attachments
Patch
(13.99 KB, patch)
2017-10-19 10:44 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-19 10:40:06 PDT
<
rdar://problem/35076952
>
Joanmarie Diggs
Comment 2
2017-10-19 10:44:47 PDT
Created
attachment 324249
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-20 09:30:24 PDT
Comment on
attachment 324249
[details]
Patch Clearing flags on attachment: 324249 Committed
r223766
: <
https://trac.webkit.org/changeset/223766
>
WebKit Commit Bot
Comment 4
2017-10-20 09:30:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug